Implemented basic authentication.

--- a/src/main/resources/html/index.html
+++ b/src/main/resources/html/index.html
@@ -9,7 +9,7 @@
     </div>
     <div style="margin-top: 150px; margin-left: 150px">
         <h3>Harmonic Series Calculator</h3>
-        <form method="post">
+        <form method="get" action="/login">
             <table>
                 <tr>
                     <td><input type="text" name="user" placeholder="Username"></td>
