Implemented adding users.

--- a/src/main/resources/html/admin/3.html
+++ b/src/main/resources/html/admin/3.html
@@ -19,32 +19,9 @@
 </div>
 <div style="width: 100%">
     <div style="width: 100%; margin-top: 50px; float: left; margin-left: 100px; text-align: left">
-        <form action="" method="post" >
+        <form action="/addUser" method="get" >
             <table>
                 <tr>
                     <th>Adicionar Usuários</th>
                 </tr>
                 <tr>
-                    <td><input type="text" placeholder="New Username"></td>
-                    <td><input type="password" placeholder="New Password"></td>
-                    <td>
-                        <select>
-                            <option value="user">User</option>
-                            <option value="admin">Admin</option>
-                        </select>
-                    </td>
-                    <td><input type="button" value="Add User"></td>
-
-                </tr>
-            </table>
-        </form>
-        <table>
-            <tr>
-                <th>Administrar usuários</th>
-            </tr>
-            <hr>
-            <tr>
-                <th>Nome</th>
-                <th>Tipo</th>
-                <th>Remover</th>
-            </tr>
