Added calculating intervals to admin view.

--- a/src/main/resources/html/admin/3.html
+++ b/src/main/resources/html/admin/3.html
@@ -3,25 +3,5 @@
 <div style="margin-top: 50px; margin-left: 0px; float: left; width: 30%">
     <table>
         <tr>
-            <th>Intervalos Calculados</th>
+            <th>Calculando Agora</th>
         </tr>
-        <tr>
-            <td>1</td>
-            <td><a href="?remove=1">X</a></td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td><a href="?remove=1">X</a></td>
-        </tr>
-
-    </table>
-</div>
-</div>
-<div style="width: 100%">
-    <div style="width: 100%; margin-top: 50px; float: left; margin-left: 100px; text-align: left">
-        <form action="/addUser" method="get" >
-            <table>
-                <tr>
-                    <th>Adicionar Usuários</th>
-                </tr>
-                <tr>
